<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_Basic" />
        <item
            android:id="@+id/nav_education"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/menu_education" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_experience" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_skills" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
